--- a/src/style.css
+++ b/src/style.css
@@ -63,12 +63,6 @@ button:hover {
   background-color: #f9f9f9;
 }
 
-/*#chart-container {
-  text-align: center;
-  margin-top: 1rem;
-  width: 100%; !* Ensure the container spans the parent width *!
-  overflow: hidden; !* Prevent scrollbars from appearing *!
-}*/
 #market-profile-table-container {
   max-width: 500px;
   text-align: center;
@@ -99,15 +93,13 @@ button:hover {
   font-weight: bold;
 }
 
-
-/*#market-profile-container {
-  text-align: center;
-  margin-top: 1rem;
-  width: 100%; !* Ensure the container spans the parent width *!
-  overflow: hidden; !* Prevent scrollbars from appearing *!
-
-}*/
-
+/* Pivot Dashboard Table Styles */
+#daily-table-container table th,
+#daily-table-container table td {
+  text-align: left;
+  padding: 8px;
+  border: 1px solid #ddd;
+}
 
 canvas {
   display: block; /* Prevent inline-block spacing issues */
